2008-12-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ffmpegrev:
	Update ffmpeg revision to 16086 and update to the corresponding
	swscale revision.

2008-12-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* Makefile.am:
	Add gst-libs to DIST_SUBDIRS to make sure that it's always
	disted.

	* autogen.sh:
	Remove -I m4 from autogen.sh, it's not disted and used anymore and
	thus makes autogen.sh fail if run on a tarball. Fixes bug #563305.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Apparently AC_CONFIG_MACRO_DIR breaks when using more
	than one macro directory, reverting last change.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Set AC_CONFIG_MACRO_DIR to common/m4 to point autoconf to
	our M4 macros.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ffmpegrev:
	Update ffmpeg rev to 16001 and update the date for the corresponding
	swscale checkout.

2008-12-03  Yotam Shtossel  <sh.yotam@gmail.com>

	reviewed by: Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_finalize):
	Fix check for memory to free.
	Fixes #560644

2008-11-27  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.6.1

=== release 0.10.6 ===

2008-11-27  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.6, "A little itching in our bones"

2008-11-19  Jan Schmidt  <jan.schmidt@sun.com>

	Unfreeze gst-ffmpeg pending resolution of #559467 and an out-of-cycle
	release attempt next month perhaps.

2008-11-12  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.5.3 pre-release

2008-11-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_setcaps):
	Copy the codec aspect ratio to the stream, ffmpeg expects them to be the
	same. Fixes #560305.

2008-11-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac: