@@ -27,6 +27,8 @@
 #endif
 #include <gst/gst.h>
 
+#include <gst/audio/multichannel.h>
+
 /*
  * _codecid_to_caps () gets the GstCaps that belongs to
  * a certain CodecID for a pad with compressed data.
